--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
     kapt "com.github.moxy-community:moxy-compiler:$moxy_version"
     implementation "com.github.moxy-community:moxy-androidx:$moxy_version"
     implementation "com.github.moxy-community:moxy-ktx:$moxy_version"
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
