--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
+        android:fullBackupContent=""
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -32,7 +34,7 @@
         </activity>
         <service
 
-            android:name=".service.FileIOForegroundService"
+            android:name=".service.FileUploaderForegroundService"
             android:enabled="true"
             android:exported="true" />
         <receiver android:name=".broadcastReceiver.FileIOBroadcastReceiver">
