--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,18 +5,19 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:fullBackupContent=""
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.MainActivity">
+        <activity
+            android:name=".view.MainActivity"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,12 +33,14 @@
                 <data android:mimeType="audio/*" />
             </intent-filter>
         </activity>
-        <service
 
+        <service
             android:name=".service.FileUploaderForegroundService"
             android:enabled="true"
-            android:exported="true" />
-        <receiver android:name=".broadcastReceiver.FileIOBroadcastReceiver">
+            android:exported="false" />
+        <receiver
+            android:name=".broadcastReceiver.FileIOBroadcastReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.fedorov.fileioshare.ACTION_COPY_URL" />
                 <action android:name="com.fedorov.fileioshare.ACTION_SHARE_URL" />
