--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,19 +5,18 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:fullBackupContent="false"
+        android:fullBackupContent=""
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".view.MainActivity"
-            android:exported="true">
+        <activity android:name=".view.MainActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,14 +32,12 @@
                 <data android:mimeType="audio/*" />
             </intent-filter>
         </activity>
-
         <service
+
             android:name=".service.FileUploaderForegroundService"
             android:enabled="true"
-            android:exported="false" />
-        <receiver
-            android:name=".broadcastReceiver.FileIOBroadcastReceiver"
-            android:exported="false">
+            android:exported="true" />
+        <receiver android:name=".broadcastReceiver.FileIOBroadcastReceiver">
             <intent-filter>
                 <action android:name="com.fedorov.fileioshare.ACTION_COPY_URL" />
                 <action android:name="com.fedorov.fileioshare.ACTION_SHARE_URL" />
