--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.6.10'
-    ext.moxy_version = '2.2.2'
+    ext.kotlin_version = '1.3.70'
+    ext.moxy_version = '2.1.2'
     repositories {
         google()
-        mavenCentral()
-
+        jcenter()
+        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,8 +20,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        mavenCentral()
-
+        jcenter()
+        
     }
 }
 
