--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fedorov.fileioshare">
 
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -17,6 +16,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".screen.main.MainActivity"
+            android:launchMode="singleInstance"
             android:exported="true">
 
             <intent-filter>
@@ -34,10 +34,6 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name=".service.FileUploaderForegroundService"
-            android:enabled="true"
-            android:exported="false" />
         <receiver
             android:name=".broadcastReceiver.FileIOBroadcastReceiver"
             android:exported="false">
