Returned Foreground service with direct uploading

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,11 @@
 
         </activity>
 
+        <service
+            android:name=".service.FileUploaderForegroundService"
+            android:enabled="true"
+            android:exported="false" />
+
         <receiver
             android:name=".broadcastReceiver.FileIOBroadcastReceiver"
             android:exported="false">
